Fixed flex wrap of section 2

--- a/style.css
+++ b/style.css
@@ -106,8 +106,12 @@ button
    
 }
 
-.content2{
+.content2{ 
+    margin: 0px;
     margin-top: 50px;
+    width: 100%;
+    
+   
 }
 
 
@@ -121,7 +125,9 @@ button
 
 .events{
     display: flex;
-    gap: 60px;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 48px;
 }
 
 .events img{
@@ -141,6 +147,7 @@ button
     border-radius: 15px;
     padding: 20px;
     font-size: 22px;
+    width: 320px;
 
 }
 
